# hsFHIR

./: .gitignore  LICENSE  README.md  TODO.md  hsFHIR.cabal  stack.yaml
code-gen/: all.hrl  cb_data.txt  cb_history  cb_indices  codes.hrl  compile_xsd.erl  complexcodes.hrl  convert-xsd-erlang.xql  dao.hrl  erlsom_types.hrl  fhir.hrl  fhir_400.hrl  fhir_400_full.hrl  fhir_400_red.hrl  filter.hrl  helpers.hrl  non_fhir.hrl  ntwo_types.hrl  primitives.hrl  query.hrl  search_params.hrl  xsd2hs.erl
config/: app.dhall  capabilityStatement-template.json  configuration.yml  fhirversion.properties  indexes.xml  search-parameters.xml  search.yml  search_complete.yml
src/Data/FHIR/: Datatypes.hs  Date.hs  IdMeta.hs  Interface.hs  Model.hs  Resources.hs  RestApi.hs  Search.hs
src/Data/FHIR/Datatypes/: ElementDefinition.hs  Internal.hs  Regex.hs  ResourceTypes.hs  XML.hs  XhtmlDiv.hs  XmlUtils.hs
src/Data/FHIR/Resources/: ActivityDefinition.hs  AdverseEvent.hs  AllergyIntolerance.hs  Basic.hs  Binary.hs  Bundle.hs  Bundle.hs.man  CapabilityStatement.hs  CarePlan.hs  CareTeam.hs  Claim.hs  ClinicalImpression.hs  CodeSystem.hs  Communication.hs  Composition.hs  Condition.hs  Consent.hs  Coverage.hs  Device.hs  DiagnosticReport.hs  DomainResource.hs  Encounter.hs  EpisodeOfCare.hs  ExplanationOfBenefit.hs  FamilyHistory.hs  Goal.hs  Group.hs  HealthcareService.hs  ICalendar.hs  ImagingStudy.hs  Immunization.hs  Leave.hs  Library.hs  Location.hs  MedicationRequest.hs  Observation.hs  OperationOutcome.hs  Organization.hs  Parameters.hs  Patient.hs  (+17 more)
test/unit/Data/FHIR/: DateSpec.hs
test/unit/Data/FHIR/Datatypes/: InternalSpec.hs  XmlSpec.hs
test/unit/Data/FHIR/Resources/: PatientSpec.hs
test/unit/Language/N1QL/: AnalyzeSpec.hs  CompileSpec.hs  PathsSpec.hs  SearchConfigSpec.hs  SimpleN1QLSpec.hs  TreeSpec.hs  ZipperSpec.hs
test/unit/Language/N1QL/SimpleN1QL/: PrettySpec.hs
test/unit/Ntwo/: QuerySpec.hs
